Add total moves

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="grid"></div>
         <div class="info">
-            <p>Time: <span id="timer">00:00</span> | Moves: <span id="moves">0</span></p>
+            <p>Time: <span id="timer">00:00</span> | Moves: <span id="moves">0</span> | Total Moves: <span id="totalMoves">0</span></p>
         </div>
     </div>
 
